# path-to-sde2

./: .gitignore  6-month-ai-backend-system-design-plan.md  LICENSE  README.md
.github/workflows/: deploy-url-shortener.yml
notes/System Design/LLD/: 1-LLD-vs-HLD-vs-DSA.md
notes/System Design/LLD/2-OOPs/: 1-oops.md  (+4 more)
notes/month-1/week-1/: 1-REST-maturity.md  2-API-versioning.md  3-idempotency.md  4-pagination.md
notes/month-1/week-2/: 1-indexing.md  2-transaction.md  3-isolation-levels.md  4-query-planner.md
notes/month-1/week-3/: 1-cache-aside.md  2-write-through.md  3-redis-data-structure.md
notes/month-1/week-4/: event-driven-architecture.md  message-queue.md
notes/month-2/: jwt.md
notes/month-2/week-5/: oauth-basics.md  rate-limiting.md
notes/month-2/week-6/: blob-storage.md  pre-signed-urls.md
plans/: 6-month-ai-backend-system-design-plan.md
projects/file_upload_service/: .env.example  .env.production  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
projects/file_upload_service/alembic/: env.py
projects/file_upload_service/app/: main.py
projects/file_upload_service/app/api/v1/: deps.py  router.py
projects/file_upload_service/app/api/v1/endpoints/: files.py
projects/file_upload_service/app/core/: config.py  exceptions.py  minio_client.py  storage.py  virus_scanner.py
projects/file_upload_service/app/db/: session.py
projects/file_upload_service/app/models/: file.py
projects/file_upload_service/app/repositories/: file_repository.py
projects/file_upload_service/app/schemas/: file.py
projects/file_upload_service/app/services/: file_service.py
projects/file_upload_service/app/utils/: file_utils.py  logger.py
projects/file_upload_service/docs/: render-deployment.md
projects/url_shortener/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml  start.sh
projects/url_shortener/alembic/: env.py
projects/url_shortener/alembic/versions/: 3bb6a76709a3_fix_table_indexing.py  41ad3d82818b_fix_table_indexing.py  8f79aa1623bc_create_urls_table.py  99b187b6d897_add_indexes_for_performance.py  affa2455cc19_fix_table_indexing.py  b7d13ee0a4f2_add_user_id_to_urls.py  ec46e3e114db_create_user_tables.py  f56b68d455a3_fix_table_indexing.py
projects/url_shortener/app/: main.py
projects/url_shortener/app/api/: deps.py
projects/url_shortener/app/api/v1/: router.py
projects/url_shortener/app/api/v1/endpoints/: auth.py  url_redirect.py  url_shortening.py
projects/url_shortener/app/core/: cache.py  config.py  exceptions.py  rate_limiter.py  redis_pool.py  scheduler.py  security.py
projects/url_shortener/app/core/cache/: __init__.py  analytics_cache.py  base_cache.py  url_cache.py
projects/url_shortener/app/core/message_queue/: __init__.py  message_queue.py
projects/url_shortener/app/db/: session.py
projects/url_shortener/app/models/: refresh_token.py  url.py  user.py
projects/url_shortener/app/repositories/: url_repository.py  user_repository.py
projects/url_shortener/app/schemas/: url.py  user.py
projects/url_shortener/app/services/: analytics_service.py  analytics_sync_service.py  auth_service.py  url_redirection_service.py  url_shortening_service.py
projects/url_shortener/app/static/: web.css
projects/url_shortener/app/templates/: base.html  index.html
projects/url_shortener/app/templates/web/: dashboard.html  home.html  login.html  register.html
projects/url_shortener/app/utils/: logger.py  shortener.py
projects/url_shortener/app/web/: __init__.py  router.py
projects/url_shortener/app/workers/: analytics_worker.py
projects/url_shortener/docs/: docker-guide.md  folder-structure.md
projects/url_shortener/scripts/: ab_load_test.sh  load_test.py  redirect_load_test.py  test_analytics.py
(+14 files in other folders)
