[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "file-upload-service"
version = "0.1.0"
description = "Production-grade file upload microservice with MinIO, pre-signed URLs, and virus scanning"
authors = [{ name = "Backend Engineer", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
minio = "^7.2.0"
pyclamd = "^0.4.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dateutil = "^2.8.0"
tenacity = "^8.2.0"
boto3 = "^1.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
