[project]
name = "url-shortener"
version = "0.2.0"
description = "High-Performance Async FastAPI URL Shortener"
authors = [{ name = "Kanai" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # DB - Async
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",             # Async PostgreSQL driver
    "psycopg[binary]>=3.2.0",      # Keep for alembic migrations
    "alembic>=1.13.0",
    # Config
    "pydantic-settings>=2.4.0",
    # Utils
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.5",
    # Redis - Async
    "redis[hiredis]>=5.0.0", # hiredis for 10x faster parsing
    # Background Jobs
    "apscheduler>=3.10.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # Logging
    "structlog>=24.0.0",
    # Auth
    "PyJWT>=2.9.0",
    # Performance
    "orjson>=3.10.0", # Fast JSON serialization
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",

    "black>=24.8.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]


[tool.black]
line-length = 88
target-version = ["py311"]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
